--- a/pages/content/default/template.html
+++ b/pages/content/default/template.html
@@ -2,7 +2,5 @@
   <h1 id="title">Content</h1>
   <h2 text="entry._id"></h2>
 
-  <div id="fields" ev.change="on_change_field">
-  </div>
-
+  <div id="fields" ev.change="on_change_field"></div>
 </div>
